2014-12-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_lockfile): Gettextize the "File being edited"
	prompt, and improve its wording.
	* src/winio.c (do_credits): Remove the names of past translators
	from the Easter-egg scroll.
	* THANKS: Add a missing	historical translator name.
	* src/winio.c (do_credits): Add Mark to the scroll, for all his
	undo work, colouring nano's interface, and other patches.

2014-11-30  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/spec.nanorc: Colorize %pretrans and %posttrans fully.
	Original patch from Savannah patch #8573 by Daniel Vrátil.

2014-09-21  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/{perl,python,ruby,sh}.nanorc: Recognize also header
	lines of the form "#!/usr/bin/env thing" besides "#!/bin/thing".
	This fixes Savannah bug #43270 reported by Kitty.

2014-08-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_justify): Replace the old get_shortcut() wrapper
	with the new func_from_key().

2014-08-10  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Improve some wordings and formatting.

2014-08-07  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/nanorc.nanorc: Remove a mistaken OR which causes a
	'Bad regex, empty (sub)expression' error on some systems.  This
	fixes Savannah bug #42929 reported by Misty De Meo.

2014-08-03  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nano.1, doc/man/rnano.1: Tweak the formatting a bit so that
	po4a will create a nicer POT file.
	* doc/man/nanorc.5: Improve some of the wordings and formatting.

2014-08-02  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Standardize the formatting of command-line
	options -- each one separately.  Also add some more markup.

2014-08-01  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nano.1, doc/man/rnano.1: Separate short and long option
	by a comma instead of putting the long one between parentheses.