@@ -1,3 +1,9 @@
+2015-01-03  Chris Allegretta <chrisa@asty.org>
+	* New formatter code to support syntaxes like
+	go which have tools to automatically lint and reformat the text for
+	you (gofmt), which is lovely.  rcfile option formatter, function
+	text.c:do_formatter() and some other calls.
+
 2014-12-28  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (do_lockfile): Gettextize the "File being edited"
 	prompt, and improve its wording.
